src/test/rustdoc-ui/test-ice.stderr
error: expected one of `!` or `::`, found `<eof>`
 --> $DIR/test-ice.rs:3:1
  |
3 | fail
  | ^^^^ expected one of `!` or `::` here

error: aborting due to previous error

